--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.1.0",
     "oracledb": "^5.5.0",
+    "sass": "^1.62.1",
     "socket.io": "^4.6.1"
   }
 }
