--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "nodemailer-express-handlebars": "^6.1.0",
+    "nodemon": "^2.0.22",
     "oracledb": "^5.5.0",
     "sass": "^1.62.1",
     "socket.io": "^4.6.1"
