--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.22",
     "oracledb": "^5.5.0",
     "sass": "^1.62.1",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "telegraf": "^4.12.2"
   }
 }
